recap/ghost-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: ghost
  name: ghost
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ghost
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: ghost
    spec:
      containers:
        - image: ghost:5.8.3-alpine
          name: ghost
          ports:
            - containerPort: 2368
          resources:
            requests:
              cpu: 100m
              memory: 500Mi
            limits:
              cpu: 1
              memory: 2Gi
status: {}
