recap/ghost-svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: ghost
  name: ghost
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 2368
  selector:
    app: ghost
  type: ClusterIP
status:
  loadBalancer: {}
