recap/ghost-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ghost
spec:
  tls:
    - hosts:
        - ghost.bar.com
      # secretName: tls-secret
  ingressClassName: nginx
  rules:
    - host: ghost.bar.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              # This assumes http-svc exists and routes to healthy endpoints
              service:
                name: ghost
                port:
                  number: 80
